--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,11 +1,34 @@
 /* NavBar.css */
 
-.navbar {
+/* .navbar {
     background-color: #333;
     padding: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+  } */
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #333;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 2; /* Set a higher z-index than SubNav */
+    height: 32px;
+
+    /* background-color: transparent;  */
+
+    transition: background-color 0.5s ease; 
+  }
+  .navbar.transparent {
+    background-color: transparent;
+  }
+  .navbar.solid {
+    background-color: #333; /* Change to your solid color */
   }
 
   .nav-links .active{
