--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -64,22 +64,29 @@
     color: #25037a; 
   } */
   
+  .user-actions {
+    display: flex;
+    align-items: center;
+  }
   .user-actions button {
     margin-left: 10px;
-    padding: 8px 15px;
-    border: none;
-    border-radius: 5px;
     cursor: pointer;
   }
   
   .profile-btn {
-    background-color: #4CAF50; /* Green color, change as per your design */
-    color: white;
+    color: black;
+    background: none;
+    font-size: 25px;
+    border: none;
+    margin-top: 6px;
   }
   
   .login-btn {
-    background-color: #008CBA; /* Blue color, change as per your design */
-    color: white;
+    background-color: transparent;
+    color: black;
+    padding: 8px 30px;
+    border: 2px solid black;
+    border-radius: 25px;
   }
   
 
