--- a/frontend/src/Components/footer/Footer.css
+++ b/frontend/src/Components/footer/Footer.css
@@ -24,7 +24,7 @@
   }
   
   .footer a:hover {
-    color: #0070f3;
+    color: #b85ee6;
   }
   
   .footer nav {
@@ -34,14 +34,14 @@
   }
   
   .footer nav a {
-    color: #333;
+    color: black;
     text-decoration: none;
     margin: 10px;
     font-size: 20px;
   }
   
   .footer nav a:hover {
-    color: #0070f3;
+    color: #b85ee6;
   }
   
   .footer .social-icons {
@@ -51,13 +51,13 @@
   }
   
   .footer .social-icons a {
-    color: #333;
+    color: black;
     text-decoration: none;
     font-size: 24px;
   }
   
   .footer .social-icons a:hover {
-    color: #0070f3;
+    color: #b85ee6;
   }
   
   .footer aside {
@@ -66,6 +66,6 @@
   }
   
   .footer aside p {
-    color: #333;
+    color: black;
     font-size: 14px;
   }
