--- a/frontend/src/Components/Movie_Booking/SubNavMB/SubNavMB.css
+++ b/frontend/src/Components/Movie_Booking/SubNavMB/SubNavMB.css
@@ -19,6 +19,7 @@
   display: flex;
   width: 85%;
   justify-content: space-between;
+  margin: 0 auto;
 }
 .right-side .Location{
   display: flex;
