--- a/frontend/src/Components/Movie_Booking/MovieDetails/MovieDetails.css
+++ b/frontend/src/Components/Movie_Booking/MovieDetails/MovieDetails.css
@@ -127,3 +127,73 @@
     font-size: 30px;
     margin-bottom: 20px;
   }
+
+
+
+  /* pop up css  */
+  /* MovieDetails.css */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .modal {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    max-width: 800px;
+    position: relative;
+  }
+  
+  .modal-close-button {
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+  
+  .modal-content {
+    margin-top: 20px;
+  }
+  
+  .modal-language,
+  .modal-showtype {
+    margin-bottom: 10px;
+  }
+
+
+  .modal-showtype .showTypeBtn{
+    border: 0px;
+    padding: 7px 18px;
+    border-radius: 7px;
+    cursor: pointer;
+    font-size: 17px;
+  }
+  
+  .modal-language h3,
+  .modal-showtype h4 {
+    margin: 0;
+  }
+  
+  .modal-language ul,
+  .modal-showtype ul {
+    /* padding-left: 20px; */
+    list-style-type: none;
+  }
+  
+  .modal-language li,
+  .modal-showtype li {
+    margin-bottom: 5px;
+  }
