--- a/frontend/src/Components/Auth/Address/Address.css
+++ b/frontend/src/Components/Auth/Address/Address.css
@@ -64,9 +64,9 @@
   }
   
   
-  button:hover {
+  /* button:hover {
     background-color: #0056b3;
-  }
+  } */
   .submit{
     display: flex;
   }
