--- a/frontend/src/Components/Auth/ForgetPassword/ForgetPassword.css
+++ b/frontend/src/Components/Auth/ForgetPassword/ForgetPassword.css
@@ -56,7 +56,7 @@
     transition: background-color 0.3s ease;
   }
   
-  button:hover {
+  /* button:hover {
     background-color: #0056b3;
-  }
+  } */
   
