--- a/frontend/src/Components/Auth/Login/Login.css
+++ b/frontend/src/Components/Auth/Login/Login.css
@@ -59,9 +59,9 @@ button {
   transition: background-color 0.3s ease;
 }
 
-button:hover {
+/* button:hover {
   background-color: #0056b3;
-}
+} */
 .custom-link {
   text-decoration: none;
   color: inherit;
