--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -23,7 +23,7 @@
   }
   
   .navbar.solid {
-    background-color: #e2d5d5; /* Change to your solid color */
+    background-color: #ebd4f6; /* Change to your solid color */
   }
 
   .nav-links .active{
