--- a/frontend/src/Components/Movie_Booking/MovieDetails/MovieDetails.css
+++ b/frontend/src/Components/Movie_Booking/MovieDetails/MovieDetails.css
@@ -1,5 +1,5 @@
 .movie-container{
-    background-color: #787474;
+    background-color: #f8f0f7;
     margin: 100px 0;
 }
 
@@ -30,13 +30,13 @@
     margin-bottom: 10px;
     margin-top: 20px;
     text-align: left;
-    color: white;
+    color: black;
   }
   
   .movie-info p{
     font-size: 20px;
     margin:  20px 0;
-    color: white;
+    color: black;
   }
   
   .movie-info .movie-genre,
@@ -45,19 +45,21 @@
   {
     font-size: 20px;
     margin:  20px 0;
-    color: white;
+    color: black;
   }
 
- button{
+ .book-button{
     padding: 10px 30px;
     border-radius: 2px;
-    border: none;
+    border: 1px solid black;
     background: #e2d5d5;
     color: black;
     font-size: 20px;
     cursor: pointer;
  }
-
+.movie-description{
+  font-size: 20px;
+}
 
  .castAndCrew{
     width: 80%;
@@ -167,19 +169,29 @@
   .modal-content {
     margin-top: 20px;
   }
-  
+
+  .movie-duration,
+  .movie-release-date{
+    text-align: left;
+  }
+/* 
   .modal-language,
   .modal-showtype {
-    margin-bottom: 10px;
-  }
+
+  } */
 
 
   .modal-showtype .showTypeBtn{
-    border: 0px;
-    padding: 7px 18px;
-    border-radius: 7px;
-    cursor: pointer;
-    font-size: 17px;
+  
+      border: 0px;
+      padding: 8px 12px;
+      border-radius: 21px;
+      cursor: pointer;
+      font-size: 16px;
+      width: 64px;
+    color: black;
+    background-color: #fdfaff;
+    border: 0.5px solid #333;
   }
   
   .modal-language h3,
