--- a/frontend/src/Components/footer/Footer.css
+++ b/frontend/src/Components/footer/Footer.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
-    background-color: #e2d5d5;
+    background-color: #ebd4f6;
     /* background-color: #f0f0f0; */
     /* #e2d5d5 */
     border-radius: 10px;
