Authentication code complete

--- a/frontend/src/Components/Auth/ChangePassword/ChangePassword.css
+++ b/frontend/src/Components/Auth/ChangePassword/ChangePassword.css
@@ -1,6 +1,6 @@
 
 .change-password-container {
-    max-width: 450px;
+    max-width: 450px; 
     margin: auto;
     padding: 20px;
     border: 1px solid #ccc;
@@ -25,3 +25,19 @@
     margin-bottom: 10px;
   }
   
+  .OTPitems{
+    display: flex;
+  }
+  
+  
+
+  .OTPItem{
+    margin: 5px;
+    text-align: center;
+    font-size: 25px;
+  }
+
+  .OTPbtn{
+    margin: 20px 0 10px;
+    width: 100%;
+  }
