--- a/frontend/src/Components/Music_Streaming/BottomBar/BottomBar.css
+++ b/frontend/src/Components/Music_Streaming/BottomBar/BottomBar.css
@@ -7,10 +7,16 @@
     display: flex;
 }
 
+.hidden{
+    visibility: hidden;
+}
 
 .bottom-bar-left{
     width: 20%;
     background: red;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
 }
 
 .bottom-bar-center{
@@ -39,8 +45,56 @@
 }
 .bottomBarscontrols-left
 {
-    margin-top: 13px;
+    margin-top: 5px;
 }
 .bottomBarscontrols-right{
-    margin-top: 10px;
+    margin-top: 3px;
+}
+
+
+
+.bottom-bar-item{
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border: 1px solid white;
+    cursor: pointer;
+    margin: 5px 0;
+    border-radius: 5px;
+    padding: 0px 10px;
+}
+
+.bottom-bar-img-container{
+    height: 50px;
+    width: 50px;
+    margin-right: 15px;
+}
+
+.bottom-bar-img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.bottom-barTitle{
+    font-size: 15px;
+}
+
+/* .bottom-barDetails{
+    height: 50px;
+} */
+.bottom-barArtists{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    color: black;
+}
+
+.artist-info{
+    margin-right: 15px;
+}
+
+.bottomcenterMarginBottom{
+    margin-bottom: 7px;
 }
