--- a/frontend/src/Components/Music_Streaming/MusicStreaming.css
+++ b/frontend/src/Components/Music_Streaming/MusicStreaming.css
@@ -3,17 +3,34 @@
 }
 
 .sidebar{
-    height: 90vh;
+    /* height: 90vh; */
     margin-bottom: -100px;
     width: 20%;
     background-color: #444;
+}
+
+.sidebar-half{
+    height: 90vh;
+}
+
+.sidebar-full{
+    height: 100vh;
 }
 
 .Main{
     width: 80%;
     background-color: blue;
     margin-bottom: -100px;
-    height: 90vh;
+    /* height: 90vh; */
     overflow: auto;
     /* margin-left: 20%; */
+}
+
+
+.Main-half{
+    height: 90vh;
+}
+
+.Main-full{
+    height: 100vh;
 }
