--- a/frontend/src/Components/Music_Streaming/BottomBar/BottomBar.css
+++ b/frontend/src/Components/Music_Streaming/BottomBar/BottomBar.css
@@ -12,7 +12,7 @@
 }
 
 .bottom-bar-left{
-    width: 20%;
+    width: 25%;
     background: red;
     display: flex;
     align-items: center;
@@ -25,8 +25,10 @@
 }
 
 .bottom-bar-right{
-    width: 20%;
+    width: 25%;
     background: red;
+    display: flex;
+    align-items: center;
 }
 
 
@@ -101,10 +103,16 @@
 
 
 .addToPlaylist{
-    display: flex;
-    padding-right: 30px;
-    justify-content: end;
+    /* display: flex; */
+    padding-right: 5px;
+    /* justify-content: end; */
     align-items: center;
     margin-top: 15px;
+    margin-right: -15px;
     font-size: 35px;
+    width: 25%;
+}
+
+.volControlBot{
+    width: 75%;
 }
