--- a/frontend/src/Components/Music_Streaming/Modals/CreatePlaylistModal/CreatePlaylistModal.css
+++ b/frontend/src/Components/Music_Streaming/Modals/CreatePlaylistModal/CreatePlaylistModal.css
@@ -15,16 +15,17 @@
    
    .modal-content {
     background-color: #1a202c; 
-    width: 33.33%;
+    width: 60%;
     border-radius: 0.375rem; 
     padding: 2rem; 
    }
    
    .modal-title {
-    color: white;
-    margin-bottom: 1.25rem; /* Assuming this is the equivalent of mb-5 */
-    font-weight: 600; /* Assuming this is the equivalent of font-semibold */
-    font-size: 1.125rem; /* Assuming this is the equivalent of text-lg */
+    color: black;
+    margin-bottom: 1.25rem;
+    font-weight: 600;
+    font-size: 1.125rem;
+    text-align: center;
    }
    
   
