--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -65,12 +65,15 @@
     cursor: pointer;
   }
   
-  .profile-btn {
+  .user-actions .profile-btn {
     color: black;
     background: none;
     font-size: 25px;
     border: none;
-    margin-top: 6px;
+
+    margin-top: 20px;
+    cursor: pointer;
+    font-size: 32px;
   }
   
   .login-btn {
@@ -81,3 +84,37 @@
     border-radius: 25px;
   }
   
+
+
+
+
+  .dropdown-menu {
+    border-radius: 10px;
+    position: absolute;
+    right: 0;
+    background-color: #444;
+    min-width: 240px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-top: 225px;
+    margin-right: 125px;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+   }
+   
+   .dropdown-menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+   }
+   
+   .dropdown-menu li {
+    padding: 8px 16px;
+    cursor: pointer;
+   }
+   
+   .dropdown-menu li:hover {
+    background-color: #222;
+   }
+   
