Movie Booking Related Pages done

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -16,7 +16,10 @@
     transition: background-color 0.5s ease; 
   }
 
- 
+ .LinkTextDeco{
+  text-decoration: none;
+  color: white;
+ }
 
   .navbar.transparent {
     background-color: transparent;
