--- a/frontend/src/Components/Movie_Booking/SeatShowtime/SeatShowtime.css
+++ b/frontend/src/Components/Movie_Booking/SeatShowtime/SeatShowtime.css
@@ -57,3 +57,19 @@
   background-color: gray;
   color: white;
 }
+
+.total-price-box {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  /* padding: 10px; */
+  background-color: #b479ec;
+  color: black;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  text-align: center;
+  font-size: 22px;
+ }
+ 
