--- a/frontend/src/Components/Ecom/SubNavEC/SubNavEC.css
+++ b/frontend/src/Components/Ecom/SubNavEC/SubNavEC.css
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   height: 100%;
-  justify-content: center; /* Changed */
+  justify-content: center; 
 }
 
 .sub-nav nav .left-side,
@@ -41,7 +41,7 @@
 }
 
 .left-side li.active a {
-  color: #b85ee6; /* Set the color to red for the active menu item */
+  color: #b85ee6; 
 }
 
 .sub-nav nav .right-side li {
@@ -49,7 +49,7 @@
 }
 
 .sub-nav nav .right-side li:last-child {
-  margin-right: 0; /* Remove margin from the last item */
+  margin-right: 0; 
 }
 
 .sub-nav nav ul {
@@ -69,15 +69,14 @@
   transition: color 0.3s ease;
 }
 
-.sub-nav nav a:hover,
+/* .sub-nav nav a:hover,
 .sub-nav nav button:hover {
   color: #ccc;
-}
+} */
 .search-box-ec {
   display: flex;
   align-items: center;
   background-color: #fff;
-  /* padding: 5px 10px; */
   border-radius: 5px;
   width: 80%;
   justify-content: space-around;
@@ -100,12 +99,12 @@
   cursor: pointer;
   transition: opacity 0.3s ease;
   font-size: 17px;
-  /* font-size: 20px; */
+
   color: black;
 }
 
 .sub-nav .search-box button {
- /* height: 30px; */
+
  width: 20%;
 }
 
@@ -121,9 +120,9 @@
 }
 
 .search-box input[type="text"] {
-  /* ... your existing styles ... */
-  opacity: 0; /* Initially, hide the input */
-  transition: opacity 0.3s ease; /* Add fade-in transition */
+ 
+  opacity: 0; 
+  transition: opacity 0.3s ease; 
 }
 
 
@@ -133,13 +132,9 @@
 
 
 
-
-/* Existing styles */
-
-/* Search button styles */
 .search-btn-ec {
-  background-color: black; /* Black background on hover */
-  color: white; /* White text on hover */
+  background-color: black; 
+  color: white; 
   padding: 15px;
   border: none;
   border-radius: 4px;
@@ -163,5 +158,47 @@
  
  .search-box.visible .search-field {
   opacity: 1;
+ }
+ 
+
+ .product-image-ec-container{
+  width: 115px;
+  height: 115px;
+  object-fit: cover;
+ }
+
+ .product-image-ec {
+  width: 100%; 
+  height: 100%;
+  /* height: auto; */
+  margin-right: 10px; 
+  object-fit: contain;
+ }
+ 
+
+.search-results-ec{ width: 60%;
+ margin: 10px auto;}
+
+ .search-result-ec{
+  display: flex;
+  margin: 10px 0;
+ }
+
+ .search-results-ec {
+  max-height: 300px; 
+  overflow-y: auto; 
+  margin-top: 10px; 
+ }
+ 
+ .search-result-ec {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ccc; 
+ }
+ 
+ .product-details-ec {
+  flex-grow: 1;
+  margin-left: 20px;
  }
  
