--- a/frontend/src/Components/Music_Streaming/HomeMusic/PlaylistHome/PlaylistHome.css
+++ b/frontend/src/Components/Music_Streaming/HomeMusic/PlaylistHome/PlaylistHome.css
@@ -4,10 +4,10 @@
     grid-template-columns: 1fr 1fr 1fr;
     /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     column-gap: 10px;
-    width: 80%;
     margin: auto;
     gap: 20px;
-    width: 80%;
+    width: 63%;
+    /* width: 80%; */
     margin: auto;
 }
 
