--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -54,8 +54,8 @@
     font-weight: bold;
     font-size: 19px;
   }
-/*   
-  .nav-links a:hover {
+  
+  /* .nav-links a:hover {
     color: #25037a; 
   } */
   
