--- a/frontend/src/Components/Movie_Booking/SeatShowtime/SeatShowtime.css
+++ b/frontend/src/Components/Movie_Booking/SeatShowtime/SeatShowtime.css
@@ -20,7 +20,7 @@
 }
 
 .showtime-item {
-  padding: 10px;
+  /* padding: 10px; */
   /* border: 1px solid #ccc; */
   cursor: pointer;
   background-color: white;
@@ -73,3 +73,7 @@
   font-size: 22px;
  }
  
+
+ .payment-button{
+  background-color: transparent;
+ }
