--- a/frontend/src/Components/Music_Streaming/BottomBar/BottomBar.css
+++ b/frontend/src/Components/Music_Streaming/BottomBar/BottomBar.css
@@ -1,7 +1,7 @@
 .bottom-bar {
     width: 100%;
-    height: 10vh;
-    background-color: #333;
+    height: 12vh;
+    background-color: #b269ff;
     position: fixed; /* Fix the bottom bar to the bottom of the viewport */
     bottom: 0;
     display: flex;
@@ -80,7 +80,7 @@
 }
 
 .bottom-barTitle{
-    font-size: 15px;
+    font-size: 22px;
 }
 
 /* .bottom-barDetails{
@@ -121,4 +121,5 @@
 .bottomScrubber{
     width: 80%;
     margin: -30px auto 0;
+    accent-color: #ebd4f6;
 }
