--- a/frontend/src/Components/Music_Streaming/MusicItem/MusicItem.css
+++ b/frontend/src/Components/Music_Streaming/MusicItem/MusicItem.css
@@ -1,11 +1,11 @@
 .music-item{
     display: flex;
     align-items: center;
-    height: 60px;
+    height: 75px;
     border: 1px solid #111;
     cursor: pointer;
-    margin: 5px 0;
-    border-radius: 5px;
+    margin: 10px 0;
+    /* border-radius: 5px; */
     padding: 0px 10px;
 }
 
